fix layout issues with low resultion screens (mobile)

--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -206,7 +206,7 @@ body > header [data-section="about"] {
 
     display: block;
     border-radius: 50%;
-    margin: 0 auto;
+    margin: auto;
 
     box-shadow:
       0 0 0 6px light-dark(#f5f5f5, #050505),
